refactor: 람다식 개선